--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   fund-store:
     build:
-      context: ../funding-service-design-fund-store
+      context: ./apps/funding-service-design-fund-store
     command: bash -c "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi"
     environment:
       - FLASK_ENV=development
@@ -11,11 +11,11 @@ services:
       - 5681:5678
     depends_on:
       - database
-    volumes: [ '../funding-service-design-fund-store:/app' ]
+    volumes: [ './apps/funding-service-design-fund-store:/app' ]
 
   application-store:
     build:
-      context: ../funding-service-design-application-store
+      context: ./apps/funding-service-design-application-store
     command: bash -c "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi"
     environment:
       - FLASK_ENV=development
@@ -30,16 +30,16 @@ services:
     depends_on:
       - database
       - localstack
-    volumes: [ '../funding-service-design-application-store:/app' ]
+    volumes: [ './apps/funding-service-design-application-store:/app' ]
 
   account-store:
     build:
-      context: ../funding-service-design-account-store
+      context: ./apps/funding-service-design-account-store
     command: [ "sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
-    volumes: [ '../funding-service-design-account-store:/app' ]
+    volumes: [ './apps/funding-service-design-account-store:/app' ]
     ports:
       - 3003:8080
       - 5683:5678
@@ -48,8 +48,8 @@ services:
 
   assessment-store:
     build:
-      context: ../funding-service-design-assessment-store
-    volumes: [ '../funding-service-design-assessment-store:/app' ]
+      context: ./apps/funding-service-design-assessment-store
+    volumes: [ './apps/funding-service-design-assessment-store:/app' ]
     command: [ "sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
     ports:
       - 3005:8080
@@ -64,8 +64,8 @@ services:
 
   assessment:
     build:
-      context: ../funding-service-design-assessment
-    volumes: [ '../funding-service-design-assessment:/app' ]
+      context: ./apps/funding-service-design-assessment
+    volumes: [ './apps/funding-service-design-assessment:/app' ]
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080" ]
     depends_on:
       - assessment-store
@@ -89,11 +89,11 @@ services:
 
   frontend:
     build:
-      context: ../funding-service-design-frontend
+      context: ./apps/funding-service-design-frontend
       dockerfile: Dockerfile
       args:
         - USE_DEV_REQUIREMENTS=true
-    volumes: [ '../funding-service-design-frontend:/app' ]
+    volumes: [ './apps/funding-service-design-frontend:/app' ]
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080" ]
     depends_on:
       - application-store
@@ -122,7 +122,7 @@ services:
     depends_on:
       - localstack
     build:
-      context: ../digital-form-builder-adapter
+      context: ./apps/digital-form-builder-adapter
       dockerfile: ./runner/Dockerfile
     command: yarn runner production
     ports:
@@ -148,8 +148,8 @@ services:
 
   authenticator:
     build:
-      context: ../funding-service-design-authenticator
-    volumes: [ '../funding-service-design-authenticator:/app' ]
+      context: ./apps/funding-service-design-authenticator
+    volumes: [ './apps/funding-service-design-authenticator:/app' ]
     command: bash -c "python -m debugpy --listen 0.0.0.0:5678 -m flask run -p 8080 -h 0.0.0.0"
     ports:
       - 3004:8080
@@ -176,8 +176,8 @@ services:
 
   notification:
     build:
-      context: ../funding-service-design-notification
-    volumes: [ '../funding-service-design-notification:/app' ]
+      context: ./apps/funding-service-design-notification
+    volumes: [ './apps/funding-service-design-notification:/app' ]
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
     ports:
       - 3006:8080
