--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,67 @@
 {
     "name": "funding-service-design-docker-runner",
-    "postCreateCommand": "./scripts/reset-all-repos.sh -f",
+    "postCreateCommand": [
+        "./scripts/reset-all-repos.sh -f",
+        "code .devcontainer/funding-service-design-docker-runner.code-workspace"
+    ],
     "customizations": {
         "vscode": {
             "settings": {
-                "terminal.integrated.shell.linux": "/bin/bash"
+                "terminal.integrated.shell.linux": "/bin/bash",
             },
             "extensions": [
                 "dbaeumer.vscode-eslint",
                 "esbenp.prettier-vscode"
             ],
+        },
+        "codespaces": {
+            "repositories": {
+                "communitiesuk/funding-service-design-authenticator": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-assessment": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-assessment-store": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-account-store": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-application-store": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-frontend": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-fund-store": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/funding-service-design-notification": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                },
+                "communitiesuk/digital-form-builder-adapter": {
+                    "permissions": {
+                        "content": "write"
+                    }
+                }
+            }
         }
     }
 }
