--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       database:
         condition: service_healthy
     volumes: [ './apps/funding-service-design-fund-store:/app' ]
+    profiles: [ pre ]
 
   application-store:
     build:
@@ -34,6 +35,7 @@ services:
       localstack:
         condition: service_started
     volumes: [ './apps/funding-service-design-application-store:/app' ]
+    profiles: [ pre ]
 
   account-store:
     build:
@@ -67,6 +69,7 @@ services:
         condition: service_healthy
       localstack:
         condition: service_started
+    profiles: [ pre ]
 
   assessment:
     build:
@@ -74,11 +77,7 @@ services:
     volumes: [ './apps/funding-service-design-assessment:/app' ]
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080" ]
     depends_on:
-      - assessment-store
-      - fund-store
-      - account-store
       - redis-data
-      - authenticator
       - localstack
     environment:
       - FLASK_ENV=development
@@ -92,6 +91,7 @@ services:
     ports:
       - 3010:8080
       - 5689:5678
+    profiles: [ pre ]
 
   frontend:
     build:
@@ -102,9 +102,6 @@ services:
     volumes: [ './apps/funding-service-design-frontend:/app' ]
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080" ]
     depends_on:
-      - application-store
-      - fund-store
-      - form-runner
       - redis-data
       - localstack
     environment:
@@ -123,6 +120,7 @@ services:
     ports:
       - 3008:8080
       - 5688:5678
+    profiles: [ pre ]
 
   form-runner:
     depends_on:
@@ -151,6 +149,7 @@ services:
       - PRIVACY_POLICY_URL=http://localhost:3008/privacy
       - ELIGIBILITY_RESULT_URL=http://localhost:3008/eligibility-result
     env_file: .awslocal.env
+    profiles: [ pre ]
 
   authenticator:
     build:
@@ -161,9 +160,6 @@ services:
       - 3004:8080
       - 5684:5678
     depends_on:
-      - fund-store
-      - account-store
-      - notification
       - redis-data
     env_file: .awslocal.env
     environment:
@@ -194,6 +190,7 @@ services:
       - FLASK_DEBUG=1
       - FLASK_ENV=development
       - AWS_MSG_BUCKET_NAME=fsd-notification-bucket
+    profiles: [ pre ]
 
   data-store:
     # http://github.com/communitiesuk/funding-service-design-post-award-data-store
@@ -223,6 +220,7 @@ services:
     depends_on:
       database:
         condition: service_healthy
+    profiles: [ post ]
 
   data-store-celery:
     build:
@@ -252,6 +250,7 @@ services:
     stdin_open: true
     tty: true
     restart: unless-stopped
+    profiles: [ post ]
 
   redis-data:
     image: redis
